hphp/hack/test/typecheck/expression_trees/pipe_lambda1.php.exp
ERROR: File "pipe_lambda1.php", line 21, characters 49-50:
Variable `$$` is undefined, or not always defined. (Naming[2050])
